@@ -6,6 +6,7 @@ Revision history for DBIx::Class
 
     * Fixes
         - Fix SkipFirst and FirstSkip limit dialects (Informix and Firebird)
+        - A number of corner case fixes of void context populate() with \[]
 
 0.08196 2011-11-29 05:35 (UTC)
     * Fixes
